Fixed padding in navbar on small screens

--- a/style.css
+++ b/style.css
@@ -174,6 +174,12 @@ footer {
     align-items: center;
 }
 
+@media only screen and (max-width: 991px) {
+  .navbar-nav {
+    margin-top: 20px;
+  }
+}
+
 @media only screen and (max-width: 700px) {
   .navbar {
     padding: 20px 30px;
